# tfmttools

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  REFACTOR.md  RELEASE.md  TODO.md  rustfmt.toml  test-tfmt.sh
.PKGBUILD/: .gitignore  PKGBUILD
.forgejo/actions/rust-run/: Containerfile  action.yml  entrypoint.sh
.forgejo/scripts/: validate-release-tag.sh
.forgejo/workflows/: ci.yml  release-artifacts.yml
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/cli/: args.rs  mod.rs  options.rs
crates/cli/src/commands/: clear_history.rs  show_history.rs  undo_redo.rs
crates/cli/src/commands/rename/: apply.rs  cleanup.rs  context.rs  discovery.rs  finish.rs  mod.rs  planning.rs  session.rs  setup.rs  shared.rs  template_resolution.rs
crates/cli/src/history/: formatter.rs  mod.rs
crates/cli/src/ui/: preview_list.rs  progress_bar.rs  prompt.rs  term.rs
crates/cli/tests/: container.rs  integration.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: audiofile.rs  error.rs  history.rs  item_keys.rs  lib.rs  util.rs  warning.rs
crates/core/src/action/: case_insensitive_path.rs  mod.rs  validation.rs
crates/core/src/action/validation/: collisions.rs  errors.rs  forbidden.rs  path_rules.rs
crates/core/src/templates/: context.rs  frontmatter.rs  mod.rs  template.rs
crates/fs/: AGENTS.md  Cargo.toml
crates/fs/src/: action.rs  checksum.rs  fs.rs  fs_handler.rs  lib.rs  template.rs
crates/history/: Cargo.toml
crates/history-core/: Cargo.toml
crates/history-core/src/: error.rs
crates/history-serde/: Cargo.toml
crates/history/src/: history.rs  lib.rs
crates/test-cli/: Cargo.toml
crates/test-cli/src/: case.rs  lib.rs  runner.rs
crates/test-container/: Cargo.toml
crates/test-container/src/: case.rs  image.rs  lib.rs  protocol.rs  report.rs  runner.rs  runtime.rs  scenario.rs
crates/test-harness/: AGENTS.md  Cargo.toml
crates/test-harness/src/: context.rs  (+5 more)
crates/tfmt/: AGENTS.md  Cargo.toml
docs/: REFACTOR.md  TODO.md  agent-map.md  agent-support-token-efficiency-plan.md  container-test-harness-plan.md  release-readiness-plan.md  validate-refactor-plan.md
examples/: normalize.json  stef.tfmt
file-history/: Cargo.toml
file-history/src/: action.rs  change.rs  changelist.rs  disk.rs  history.rs  lib.rs
file-history/tests/: test_file_history.rs
history/: Cargo.toml
history/src/: history.rs  lib.rs  record.rs  serde.rs  stack.rs
packaging/: PKGBUILD
scripts/: ci.sh  package-arch-in-container.sh  package-arch.sh  package-release.sh  replace-mp3-audio-preserve-tags.py  vendor-report-assets.sh
src/: action.rs  audiofile.rs  config.rs  debug.rs  file.rs  fs.rs  history.rs  lib.rs  tags.rs  template.rs  util.rs  validation.rs
src/action/: mod.rs
src/cli/: args.rs  config.rs  histviewer.rs  main.rs  mod.rs  ui.rs  util.rs
src/template/: context.rs  mod.rs  template.rs  templates.rs
test-harness/: Cargo.toml
test-harness/src/: lib.rs
testdata/cases/: simple_input.case.json  simple_input.json  simple_input_always_copy.case.json  typical_input.case.json  typical_input.json  typical_input_always_copy.case.json  typical_input_double_application.case.json  typical_input_previous_data.case.json
tests/: test_tfmttools.rs
tests/container/: Containerfile
tfmttools-cli/: Cargo.toml
tfmttools-cli/src/: args.rs  cli.rs  config.rs  debug.rs  lib.rs  main.rs  options.rs  paths.rs  term.rs  ui.rs  util.rs
tfmttools-cli/src/commands/: clear_history.rs  copy_tags.rs  fix.rs  list_templates.rs  mod.rs  rename.rs  seed.rs  show_history.rs  undo_redo.rs
tfmttools-cli/src/commands/rename/: apply.rs  cleanup.rs  context.rs  mod.rs  setup.rs
tfmttools-cli/src/config/: paths.rs
tfmttools-cli/src/history/: action_record.rs  formatter.rs  mod.rs  record_formatter.rs  record_summary.rs
tfmttools-cli/src/ui/: mod.rs  preview_list.rs  progress_bar.rs  prompt.rs  table.rs
tfmttools-cli/tests/: test_tfmttools.rs
tfmttools-cli/tests/testdata/template/: typical_input.tfmt
tfmttools-core/: Cargo.toml
tfmttools-core/src/: audiofile.rs  error.rs  fs.rs  history.rs  item_keys.rs  lib.rs  normalize.rs  util.rs
tfmttools-core/src/action/: mod.rs  rename_action.rs  validation.rs
tfmttools-core/src/audiofile/: encoding.rs  mod.rs
tfmttools-core/src/templates/: context.rs  loader.rs  mod.rs  template.rs
tfmttools-core/tests/: normalize-deserialize.json
tfmttools-fs/: Cargo.toml
tfmttools-fs-ng/: Cargo.toml
tfmttools-fs-ng/src/: checksum.rs  lib.rs  transaction.rs
tfmttools-fs-ng/src/action/: copy.rs  delete.rs  mod.rs  move.rs
tfmttools-fs/src/: action.rs  checksum.rs  file_or_name.rs  fs.rs  lib.rs  path_iterator.rs  template.rs
tfmttools-history/: Cargo.toml
tfmttools-history-core/: Cargo.toml
tfmttools-history-core/src/: error.rs  history.rs  lib.rs  record.rs
tfmttools-history-serde/: Cargo.toml
tfmttools-history-serde/src/: lib.rs  serde_history.rs
tfmttools-history-sql/: Cargo.toml
tfmttools-history-sql/migrations/: 20250218.1134_initial_database_definition.sql
tfmttools-history-sql/src/: conn.rs  entity.rs  error.rs  history.rs  lib.rs  main.rs  migration.rs
tfmttools-history-sql/src/entity/: action.rs  mod.rs  record.rs
tfmttools-history/src/: error.rs  history.rs  lib.rs  record.rs  serde.rs  serde_history.rs  stack.rs
tfmttools-test/: Cargo.toml  test.sh
tfmttools-test/src/: context.rs  data.rs  dir.rs  file_tree.rs  lib.rs  outcome.rs  predicates.rs  runner.rs  template_reference.rs  test_case.rs  test_case_data.rs  test_failure.rs  test_result.rs
tfmttools-test/testdata/: mvp.css  test-template.html
tfmttools-test/testdata/cases/: simple_input.case.json  simple_input_always_copy.case.json  typical_input.case.json  typical_input_always_copy.case.json  typical_input_double_application.case.json  typical_input_previous_data.case.json
tfmttools-tui/: Cargo.toml
tfmttools-tui/src/: app_data.rs  lib.rs
tfmttools-tui/src/ui/: mod.rs  rename.rs  undo_redo.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+96 files in other folders)
