[workspace.package]
version = "0.23.1"
authors = ["Stef Korporaal <stef@skorporaal.com>"]
description = "Use `minijinja` to rename audio files according to their tags."
edition = "2024"
license = "BSD-3-Clause"
rust-version = "1.85.0"
repository = "https://github.com/Hellrespawn/tfmttools"
homepage = "https://github.com/Hellrespawn/tfmttools"


[workspace]
members = [
    "tfmttools-core",
    "tfmttools-cli",
    "tfmttools-fs",
    "tfmttools-history-core",
    "tfmttools-history-serde",
    "tfmttools-test",
]
default-members = ["tfmttools-cli"]
resolver = "3"

[workspace.dependencies]
adler = "1.0.2"
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
color-eyre = "0.6.3"
console = "0.15.11"
convert_case = "0.8.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
directories = "6.0.0"
fastrand = "2.3.0"
fs-err = "3.1.0"
ignore = "0.4.23"
indexmap = { version = "2.8.0", features = ["serde"] }
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
itertools = "0.14.0"
libtest-mimic = "0.8.1"
lofty = "0.22.2"
minijinja = { version = "2.7.0", default-features = false, features = [
    "loader",
    "serde",
    "builtins",
] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
textwrap = "0.16.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = "thin"

[workspace.metadata.bacon]
watch = ["tfmttools-test/testdata/test-template.html"]
