[workspace.package]
version = "0.23.1"
authors = ["Stef Korporaal <stef@skorporaal.com>"]
description = "Use `minijinja` to rename audio files according to their tags."
edition = "2024"
license = "BSD-3-Clause"
rust-version = "1.85.0"
repository = "https://github.com/Hellrespawn/tfmttools"
homepage = "https://github.com/Hellrespawn/tfmttools"


[workspace]
members = [
    "tfmttools-core",
    "tfmttools-cli",
    "tfmttools-fs",
    "tfmttools-fs-ng",
    "tfmttools-history-core",
    "tfmttools-history-serde",
    "tfmttools-test",
]
default-members = ["tfmttools-cli"]
resolver = "3"

[workspace.dependencies]
adler = "1.0.2"
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "wrap_help"] }
color-eyre = "0.6.4"
console = "0.15.11"
convert_case = "0.8.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
dirs = "6.0.0"
fastrand = "2.3.0"
fs-err = "3.1.0"
ignore = "0.4.23"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
itertools = "0.14.0"
libtest-mimic = "0.8.1"
lofty = "0.22.4"
minijinja = { version = "2.10.2", default-features = false, features = [
    "loader",
    "serde",
    "builtins",
] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
textwrap = "0.16.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true    # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.

[workspace.metadata.bacon]
watch = ["tfmttools-test/testdata/test-template.html"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
