[workspace.package]
version = "0.24.0"
authors = ["Stef Korporaal <stef@skorporaal.com>"]
description = "Use `minijinja` to rename audio files according to their tags."
edition = "2024"
license = "BSD-3-Clause"
rust-version = "1.85.0"
repository = "https://github.com/Hellrespawn/tfmttools"
homepage = "https://github.com/Hellrespawn/tfmttools"


[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/fs",
    "crates/history",
    "crates/test-harness",
]
default-members = ["crates/cli"]
resolver = "3"

[workspace.dependencies]
adler2 = "2.0.1"
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
console = "0.16.3"
convert_case = "0.11.0"
convert_case_extras = "0.2.0"
ctrlc = { version = "3.5.2", features = ["termination"] }
dirs = "6.0.0"
fastrand = "2.4.1"
fs-err = "3.3.0"
ignore = "0.4.25"
indexmap = { version = "2.14.0", features = ["serde"] }
indicatif = { version = "0.18.4", features = ["improved_unicode"] }
itertools = "0.14.0"
libtest-mimic = "0.8.2"
lofty = "0.24.0"
minijinja = { version = "2.19.0", default-features = false, features = [
    "loader",
    "serde",
    "builtins",
] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
textwrap = "0.16.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
strip = true    # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.

[workspace.metadata.bacon]
watch = ["tfmttools-test/testdata/test-template.html"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
