[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Tracks moving of files and creating/removing directories."
edition = "2021"
license = "BSD-3-Clause"
name = "file-history"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_json"]

[dependencies]
bincode = {version = "1.3", optional = true}
color-eyre = "0.6"
fs-err = "2.9"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", optional = true}
thiserror = "1.0"

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
