[package]
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
description = "Small test harness for setting up and tearing down tests"
edition = "2021"
license = "BSD-3-Clause"
name = "test-harness"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
