[package]
name = "tfmttools-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[[bin]]
name = "tfmt"
path = "src/main.rs"

[features]
debug = []

[dependencies]
tfmttools-core = { path = "../tfmttools-core" }
tfmttools-history = { path = "../tfmttools-history" }

camino = { version = "1.1", features = ["serde", "serde1"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
console = "0.15"
ctrlc = { version = "3.4", features = ["termination"] }
dirs = "5.0"
fs-err = "2.11"
indicatif = { version = "0.17", features = ["improved_unicode"] }
once_cell = "1.19"
textwrap = "0.16"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
