[package]
name = "tfmttools-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[[bin]]
name = "tfmt"
path = "src/main.rs"

[features]
debug = []

[[test]]
name = "integration"
harness = false

[dependencies]
tfmttools-core = { path = "../tfmttools-core" }
tfmttools-fs = { path = "../tfmttools-fs" }
tfmttools-history-core = { path = "../tfmttools-history-core" }
tfmttools-history-serde = { path = "../tfmttools-history-serde" }
adler = { workspace = true }
camino = { workspace = true, features = ["serde", "serde1"] }
clap = { workspace = true, features = ["derive", "wrap_help"] }
color-eyre = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
directories = { workspace = true }
fs-err = { workspace = true }
id3 = { workspace = true }
indicatif = { workspace = true, features = ["improved_unicode"] }
textwrap = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tfmttools-test = { path = "../tfmttools-test" }
assert_fs = { workspace = true }
