[package]
authors = ["Stef Korporaal <stef@skorporaal.com>"]
edition = "2021"
license = "BSD-3-Clause"
name = "tfmttools-core"
rust-version = "1.70"
version = "0.15.0"

[features]
debug = []

[dependencies]
tfmttools-history = { path = "../tfmttools-history" }

camino = { version = "1.1", features = ["serde", "serde1"] }
color-eyre = "0.6"
fs-err = "2.9"
ignore = "0.4"
lofty = "0.17"
minijinja = { version = "1.0", features = ["loader", "custom_syntax", "debug"] }
once_cell = "1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
