[package]
name = "tfmttools-core"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[features]
debug = []

[dependencies]
tfmttools-history = { path = "../tfmttools-history" }

camino = { version = "1.1", features = ["serde", "serde1"] }
color-eyre = "0.6"
convert_case = "0.6"
fs-err = "2.11"
ignore = "0.4"
lofty = "0.18"
minijinja = { version = "1.0", features = ["loader", "custom_syntax", "debug"] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
