[package]
name = "tfmttools-core"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[features]
debug = []

[dependencies]
tfmttools-history = { path = "../tfmttools-history" }
camino = { workspace = true, features = ["serde", "serde1"] }
convert_case = { workspace = true }
id3 = { workspace = true }
ignore = { workspace = true }
lofty = { workspace = true }
minijinja = { workspace = true, features = [
    "loader",
    "custom_syntax",
    "debug",
] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
