[package]
name = "tfmttools-fs-ng"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true


[dependencies]
tfmttools-core = { path = "../tfmttools-core" }
adler = { workspace = true }
camino = { workspace = true }
fs-err = { workspace = true }
# ignore = { workspace = true }
# minijinja = { workspace = true }
# regex = { workspace = true }
serde = { workspace = true }
# tracing = { workspace = true }
typetag = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
color-eyre = { workspace = true }
predicates = { workspace = true }

[lints]
workspace = true
