[package]
name = "tfmttools-fs"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true


[dependencies]
tfmttools-core = { path = "../tfmttools-core" }
camino = { workspace = true, features = ["serde", "serde1"] }
color-eyre = { workspace = true }
fs-err = { workspace = true }
ignore = { workspace = true }
minijinja = { workspace = true, features = [
    "loader",
    "custom_syntax",
    "debug",
] }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
