[package]
name = "tfmttools-history-core"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
camino = { workspace = true, features = ["serde", "serde1"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
