[package]
name = "tfmttools-history-serde"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmttools-history-core = { path = "../tfmttools-history-core" }

camino = { workspace = true, features = ["serde", "serde1"] }
fs-err = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
