[package]
name = "tfmttools-history-serde"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmttools-history-core = { path = "../tfmttools-history-core" }

camino = { workspace = true }
fs-err = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
