[package]
name = "tfmttools-history-sql"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true


[dependencies]
camino = { workspace = true }
color-eyre = { workspace = true }
include_dir = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
