[package]
name = "tfmttools-history-sql"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true


[dependencies]
tfmttools-core = { path = "../tfmttools-core" }

camino = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
color-eyre = { workspace = true }
include_dir = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
rusqlite_migration = { workspace = true, features = ["from-directory"] }
