[package]
authors = ["Stef Korporaal <stef@skorporaal.com>"]
edition = "2021"
license = "BSD-3-Clause"
name = "tfmttools-history"
rust-version = "1.70"
version = "0.15.0"

[dependencies]
camino = { version = "1.1", features = ["serde", "serde1"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
fs-err = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
