[package]
name = "tfmttools-history"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust.workspace-version = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
camino = { version = "1.1", features = ["serde", "serde1"] }
chrono = { version = "0.4", features = ["serde"] }
fs-err = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
