[package]
name = "tfmttools-history"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
camino = { workspace = true, features = ["serde", "serde1"] }
chrono = { workspace = true, features = ["serde"] }
fs-err = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
