[package]
name = "tfmttools-test"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmttools-fs = { path = "../tfmttools-fs" }

assert_cmd = { workspace = true }
assert_fs = { workspace = true }
camino = { workspace = true }
color-eyre = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
libtest-mimic = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
