[package]
authors = ["Stef Korporaal <stef@skorporaal.com>"]
edition = "2021"
license = "BSD-3-Clause"
name = "tfmttools-tui"
rust-version = "1.70"
version = "0.15.0"

[dependencies]
tfmttools-core = { path = "../tfmttools-core" }
tfmttools-history = { path = "../tfmttools-history" }

camino = { version = "1.1", features = ["serde", "serde1"] }
color-eyre = "0.6"
console = "0.15"
crossterm = "0.27"
ratatui = "0.25"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
