[package]
name = "xtask"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmt = { path = "../crates/tfmt" }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[lints]
workspace = true
