[package]
name = "tfmttools-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[[bin]]
name = "tfmt"
path = "src/main.rs"

[features]
debug = []

[[test]]
name = "integration"
harness = false

[dependencies]
tfmttools-core = { path = "../core" }
tfmttools-fs = { path = "../fs" }
tfmttools-history-core = { path = "../history-core" }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }
fastrand = { workspace = true }
dirs = { workspace = true }
itertools = { workspace = true }
indicatif = { workspace = true }
textwrap = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tfmttools-test = { path = "../test-harness" }
assert_fs = { workspace = true }

[lints]
workspace = true
