[package]
name = "tfmttools-core"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[features]
debug = []

[dependencies]
tfmttools-history = { path = "../history" }
camino = { workspace = true }
convert_case = { workspace = true }
convert_case_extras = { workspace = true }
ignore = { workspace = true }
lofty = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
