[package]
name = "tfmttools-test-cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmttools-fs = { path = "../fs" }
tfmttools-test-harness = { path = "../test-harness" }

assert_cmd = { workspace = true }
assert_fs = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
fs-err = { workspace = true }
libtest-mimic = { workspace = true }

[lints]
workspace = true
