[package]
name = "tfmttools-test-container"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
tfmttools-test-harness = { path = "../test-harness" }

camino = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
fs-err = { workspace = true }

[lints]
workspace = true
